# curses_game

./: .gitignore  README.md  setup.cfg
src/cg/: __main__.py
src/cg/chunks/: A1  A2  B1  C1  D1
