[metadata]
name = curses_game
version = 0.1.0
description = Experimenting with `curses`.
license = MIT
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    =src
install_requires =
    windows-curses;sys_platform=="win32"
python_requires = >=3.10
